--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -29,7 +29,7 @@
 /* dark colors don't need to be darkened as much for contrast */
 
 .dark-theme #navbar:before {
-  background: rgba(255, 255, 255, 0.15);
+  background: var(--primary-4);
 }
 
 /* navbar buttons */
@@ -75,6 +75,11 @@ body.is-edit-mode #toolbar-navigation-buttons {
   border-radius: 50%;
   margin: 0px 10px;
 }
+
+.dark-mode #menu-button {
+  background-color: var(--primary-4);
+}
+
 #menu-button:hover {
   background-color: #e8eaed;
 }
@@ -103,6 +108,10 @@ body.linux #menu-button {
   overflow-y: hidden;
 }
 
+#tabs #tabs-inner {
+  margin-left: 0.7rem;
+}
+
 #tabs #tabs-inner.disable-scroll {
   overflow-x: hidden;
 }
@@ -126,12 +135,33 @@ body.linux #menu-button {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+
+.dark-mode .tab-item { 
+  color: var(--neutral);
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+.dark-mode .tab-item:hover { 
+  background-color: var(--primary-4) !important;
+  opacity: 0.6;
+}
+
+.dark-mode .tab-item.active {
+  background-color: var(--primary-4) !important;
+  color: var(--neutral) !important;
+}
+
+.dark-mode .tab-item.active:hover {
+  opacity: 1;
+  transition: none;
+}
+
 .tab-item.active {
   max-width: 240px;
   min-width: 100px;
   border-radius: 8px 8px 0 0;
-  background-color: #fff !important;
-  color: black;
+  background-color: var(--neutral)!important;
+  /* color: black; */
 }
 
 .tab-item.gu-mirror {
@@ -158,7 +188,7 @@ body.linux #menu-button {
 }
 .dark-mode .tab-item.gu-mirror {
   background: rgb(84, 91, 100) !important;
-  color: white !important;
+  color: var(--neutral) !important;
 }
 .tab-item.gu-transit {
   opacity: 0 !important;
@@ -207,7 +237,7 @@ body:not(.touch)
 
 .tab-item .tab-icon {
   position: relative;
-  font-size: 0.875em;
+  /* font-size: 0.875em; */
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -268,7 +298,13 @@ body:not(.touch)
   flex: 1;
   overflow: hidden;
   white-space: nowrap;
+  color: var(--primary-4);
 }
+
+.dark-mode .tab-item .title-container {
+  color: white;
+}
+
 .compact-tabs .tab-item .title {
   font-size: 12px;
 }
@@ -307,11 +343,24 @@ body:not(.touch)
 /* buttons */
 
 .navbar-action-button {
-  padding: 0 1rem;
+  /* padding: 0 1rem;
   height: 36px;
   margin-top: -0.5px;
-  font-size: 1.4em !important;
+  font-size: 1.4em !important; */
+  width: 1.8rem;
+  height: 1.8rem;
 }
+
+.dark-mode .navbar-action-button {
+  color: var(--neutral) !important;
+}
+
+.navbar-action-button:hover {
+  background-color: rgba(255, 255, 255, 0.075) !important;
+  border-radius: 50%;
+  padding: 0;
+}
+
 body.windows .navbar-action-button:not(:disabled):hover {
   background-color: rgba(0, 0, 0, 0.075);
 }
@@ -325,14 +374,13 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
   padding-left: 0.5em;
 }
 .navbar-right-actions {
-  margin-right: 2.3em;
-  flex: 0 0 36px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar-right-actions #add-tab-button {
-  padding: 0;
-  width: 36px;
-  font-size: 1.6em !important;
+  font-size: 1.4em !important;
+  margin-left: 0.2em;
 }
 
 /* audio button */
@@ -397,12 +445,25 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
 
 /* in Carbon, close icon is a bit smaller than other icons, enlarge it in order to match with other icons */
 .tab-item .tab-close-button {
-  font-size: 1.25em;
+  width: 1.5em;
+  height: 1.5em;
   box-sizing: border-box;
   order: 1;
 }
 .tab-item .tab-close-button:hover:after {
   font-size: 0.9em;
+}
+
+.tab-item .tab-close-button:hover {
+  background-color: rgba(150, 150, 150, 0.15);
+  border-radius: 50%;
+  padding: 1px;
+}
+
+.dark-mode .tab-item .tab-close-button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 50%;
+  padding: 1px;
 }
 
 /* when the tab is hovered, hide info buttons and show the close button */
@@ -462,11 +523,15 @@ body:not(.dark-theme) .progress-bar {
 .nav-bar {
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background-color: #ffff;
   padding: 2px;
   border-radius: 8px 0px;
   /* gap: 8px; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+}
+
+.dark-mode .nav-bar {
+  background-color: var(--primary-4);
 }
 
 .nav-button {
@@ -482,13 +547,20 @@ body:not(.dark-theme) .progress-bar {
   color: #5f6368;
 }
 
+.dark-mode .nav-button {
+  color: var(--neutral);
+}
+
 .nav-button:hover {
   background-color: #e8eaed;
+  color: var(--primary-4);
 }
 
 .nav-button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+  background-color: none;
+  color: #5f6368 !important;
 }
 
 .nav-button svg {
@@ -504,6 +576,10 @@ body:not(.dark-theme) .progress-bar {
   font-size: 14px;
   border: 2px solid #dfe1e5;
   color: #202124;
+}
+
+.dark-mode .address-bar {
+  border: 2px solid var(--primary-4);
 }
 
 #tab-editor:hover {
@@ -527,7 +603,7 @@ body:not(.dark-theme) .progress-bar {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  color: #5f6368;
+  color: hsl(213, 5%, 39%);
   padding: 0;
   position: relative;
 }
